--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -484,7 +484,7 @@
                                                             <div class="empty-component" style="display: none;">
                                                                 <div class="kjzWjC empty">
                                                                     <div class="empty-image">
-                                                                        <img name="SlightlySmilingFace" src="https://cdn-dantats.stunning.kr/static/emoji/SlightlySmilingFace32px.png" class="hkAQYM" />
+                                                                        <img name="SlightlySmilingFace" src="https://cdn-dantats.stunning.kr/static/emoji/SlightlySmilingFace32px.png" class="hkAQYM" style="margin-left: 45px"/>
                                                                         <h4><span class="fendym"><b>결제 내역이 없습니다.</b></span></h4>
                                                                     </div>
                                                                 </div>
@@ -1563,18 +1563,7 @@
                                                                             <label id="application-approval" class="ezikFA">0</label>
                                                                         </div>
                                                                     </div>
-                                                                    <a class="jBsNEF btn-request btn-request-case-2" href="#" style="margin-left: 400px;">
-                                                                        <span class="visual-correction" id="approve">
-                                                                            승인하기
-                                                                            <div class="request-description-tooltip"></div>
-                                                                        </span>
-                                                                    </a>
-                                                                    <a class="jBsNEF btn-request btn-request-case-2" id="refuse" href="#" style="margin-left: 10px;">
-                                                                        <span class="visual-correction">
-                                                                            거절하기
-                                                                            <div class="request-description-tooltip"></div>
-                                                                        </span>
-                                                                    </a>
+
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -1608,93 +1597,76 @@
             </div>
         </div>
         <div>
-            <div
-                class="approvemodal"
-                style="
-                    position: fixed;
-                    top: 0px;
-                    left: 0px;
-                    width: 100%;
-                    height: 100%;
-                    display: none;
-                    justify-content: center;
-                    align-items: center;
-                    z-index: 10000;
-                "
-            >
-                <div
-                    style="
-                        transform: translate3d(0px, 0px, 0px);
-                        z-index: 10002;
-                        box-sizing: border-box;
-                        transition: transform 500ms cubic-bezier(0, 0, 0.25, 1),
-                            opacity 500ms cubic-bezier(0, 0, 0.25, 1);
-                    "
-                >
-                    <div
-                        class="alert-modal-inner-1u03v alert-modal"
-                        style="width: 365px"
-                    >
+            <!-- 승인 모달 -->
+            <div class="approvemodal" style="
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 10000;">
+                <div style="
+        transform: translate3d(0px, 0px, 0px);
+        z-index: 10002;
+        box-sizing: border-box;
+        transition: transform 500ms cubic-bezier(0, 0, 0.25, 1),
+            opacity 500ms cubic-bezier(0, 0, 0.25, 1);">
+                    <div class="alert-modal-inner-1u03v alert-modal" style="width: 365px">
                         <div class="alert-txt-box-2bji8">
                             <span class="alert-ico-1mtdg"></span>
-                            <p>봉사 활동 신청이 승인 되었습니다.</p>
+                            <p>봉사 활동 신청을 승인하시겠습니까?</p>
                             <button
-                                class="alert-btn-complete-1qcb1"
-                                id="approvecloseModal"
+                                    class="alert-btn-complete-1qcb1"
+                                    id="confirmApprove"
                             >
                                 확인
                             </button>
+
                         </div>
                     </div>
                 </div>
                 <div
-                    class="last-modal"
-                    style="
-                        position: fixed;
-                        top: 0px;
-                        left: 0px;
-                        width: 100%;
-                        height: 100%;
-                        background-color: rgba(0, 0, 0, 0.7);
-                        z-index: 10001;
-                    "
+                        class="last-modal"
+                        style="
+            position: fixed;
+            top: 0px;
+            left: 0px;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.7);
+            z-index: 10001;
+        "
                 ></div>
             </div>
         </div>
         <div>
-            <div
-                class="refusemodal"
-                style="
-                    position: fixed;
-                    top: 0px;
-                    left: 0px;
-                    width: 100%;
-                    height: 100%;
-                    display: none;
-                    justify-content: center;
-                    align-items: center;
-                    z-index: 10000;
-                "
-            >
-                <div
-                    style="
-                        transform: translate3d(0px, 0px, 0px);
-                        z-index: 10002;
-                        box-sizing: border-box;
-                        transition: transform 500ms cubic-bezier(0, 0, 0.25, 1),
-                            opacity 500ms cubic-bezier(0, 0, 0.25, 1);
-                    "
-                >
-                    <div
-                        class="alert-modal-inner-1u03v alert-modal"
-                        style="width: 365px"
-                    >
+            <!-- 거절 모달 -->
+            <div class="refusemodal" style="
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 10000;">
+                <div style="
+        transform: translate3d(0px, 0px, 0px);
+        z-index: 10002;
+        box-sizing: border-box;
+        transition: transform 500ms cubic-bezier(0, 0, 0.25, 1),
+            opacity 500ms cubic-bezier(0, 0, 0.25, 1);">
+                    <div class="alert-modal-inner-1u03v alert-modal" style="width: 365px">
                         <div class="alert-txt-box-2bji8">
                             <span class="alert-ico-1mtdg"></span>
-                            <p>봉사 활동 신청이 거절 되었습니다.</p>
+                            <p>봉사 활동 신청을 거절하시겠습니까?</p>
                             <button
-                                class="alert-btn-complete-1qcb1"
-                                id="refusecloseModal"
+                                    class="alert-btn-complete-1qcb1"
+                                    id="confirmRefuse"
                             >
                                 확인
                             </button>
@@ -1702,16 +1674,16 @@
                     </div>
                 </div>
                 <div
-                    class="last-modal"
-                    style="
-                        position: fixed;
-                        top: 0px;
-                        left: 0px;
-                        width: 100%;
-                        height: 100%;
-                        background-color: rgba(0, 0, 0, 0.7);
-                        z-index: 10001;
-                    "
+                        class="last-modal"
+                        style="
+            position: fixed;
+            top: 0px;
+            left: 0px;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.7);
+            z-index: 10001;
+        "
                 ></div>
             </div>
         </div>
