--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1547,6 +1547,7 @@
                                 <input
                                     type="submit"
                                     name="submit"
+                                    id="submit-button"
                                     value="답변제출"
                                     style="margin-bottom: 30px;"
                                 />
