--- a/src/main/resources/templates/introduction/introduction.html
+++ b/src/main/resources/templates/introduction/introduction.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link
             rel="stylesheet"
-            href="../../static/css/introduction/introduction.css"
+            href="/css/introduction/introduction.css"
         />
         <title>사업소개</title>
     </head>
@@ -178,5 +178,5 @@
             </div>
         </div>
     </body>
-    <script src="../../static/js/introduction/introduction.js"></script>
+    <script src="/js/introduction/introduction.js"></script>
 </html>
