--- a/src/main/resources/templates/main/footer.html
+++ b/src/main/resources/templates/main/footer.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>푸터</title>
-        <link rel="stylesheet" href="../../static/css/main/footer.css" />
+        <link rel="stylesheet" href="/css/main/footer.css" />
     </head>
     <body>
         <footer class="footer">
@@ -62,7 +62,7 @@
                         <div class="footer-secondary">
                             <div class="arrow-link-container">
                                 <a
-                                    href=""
+                                    href="/introduction/introduction"
                                     class="hlisls leeli link"
                                     target="_blank"
                                     >사업 소개
