--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -915,10 +915,10 @@
                                 <div class="ServiceHeader_container"><h2 class="ServiceHeader_title">공지사항 목록</h2></div>
                                 <div class="list-top">
                                     <div class="category-notification-num">번호</div>
-                                    <div class="category-notification-title">제목</div>
-                                    <div class="category-notification-date notification-table">작성일</div>
+                                    <div class="category-notification-title noti-title-admin">제목</div>
+                                    <div class="category-notification-date notification-table noti-date-admin">작성일</div>
                                 </div>
-                                <ul class="notification-list-wrap" style="height: 360px;"></ul>
+                                <ul class="notification-list-wrap" style="height:360px;"></ul>
                                 <nav class="pagination-wrap notification-table">
                                     <div class="pagination-container">
                                         <div class="pagination-num-container">
