--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -919,7 +919,7 @@
                                     <div class="category-notification-date notification-table noti-date-admin">작성일</div>
                                 </div>
                                 <ul class="notification-list-wrap" style="height:360px;"></ul>
-                                <nav class="pagination-wrap notification-table">
+                                <nav class="pagination-wrap notification-table" id="noti-paging-admin">
                                     <div class="pagination-container">
                                         <div class="pagination-num-container">
                                             <a class="pagination-num active" href=""
