--- a/src/main/resources/templates/donation/donation-list.html
+++ b/src/main/resources/templates/donation/donation-list.html
@@ -99,11 +99,11 @@
                                     사소한 도움이라도 괜찮아요. 우리가 나누는
                                     작은 마음들이 모여 더 큰 기적을 만듭니다.
                                 </div>
-                                <button class="write-button">
+                                <a href="/donation/donation-write" class="write-button">
                                     <span class="visual-correction"
                                         >작성하기</span
                                     >
-                                </button>
+                                </a>
                             </div>
                         </div>
                         <div
