--- a/src/main/resources/templates/donation/donation-update.html
+++ b/src/main/resources/templates/donation/donation-update.html
@@ -147,7 +147,8 @@
                                     </label>
                                     <div class="date-period">
                                         기간은
-                                        <span id="date-count" th:text="*{donationEDate}">0</span>일 입니다.
+<!--                                        <span id="date-count" th:text="*{donationEDate}">0</span>일 입니다.-->
+                                        <span id="date-count">0</span>일 입니다.
                                     </div>
                                 </div>
                             </div>
