--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -7,9 +7,11 @@
         <link rel="stylesheet" href="/css/main/main.css" />
         <link rel="stylesheet" href="/css/main/basic-header.css" />
         <link rel="stylesheet" href="/css/rank/rank.css" />
+        <link rel="stylesheet" href="/css/main/footer.css"/>
+        <link rel="stylesheet" href="/css/main/basic-header.css"/>
     </head>
     <body>
-
+    <div th:replace="~{main/basic-header :: header}"></div>
     <div id="root">
             <div id="app" class="bfedap app">
                 <div class="wrap">
@@ -428,7 +430,8 @@
                 </div>
             </div>
         </div>
+        <div th:replace="~{main/footer :: footer}"></div>
+    </body>
         <script src="/js/main/main.js"></script>
         <script src="/js/rank/rank.js"></script>
-    </body>
 </html>
