--- a/src/main/resources/templates/main/footer.html
+++ b/src/main/resources/templates/main/footer.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>푸터</title>
-        <link rel="stylesheet" href="/css/main/footer.css" />
+        <link rel="stylesheet" href="/css/main/footer.css"/>
     </head>
     <body>
-        <footer class="footer">
+        <footer class="footer" th:fragment="footer">
             <div class="gezuwo">
                 <div class="inner">
                     <div class="flex">
