--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="../../static/css/error/404.css" />
+        <link rel="stylesheet" href="/css/error/404.css" />
         <link
             rel="icon"
             type="image/x-icon"
@@ -66,5 +66,5 @@
             </div>
         </div>
     </body>
-    <script src="../../static/js/error/404.js"></script>
+    <script src="/js/error/404.js"></script>
 </html>
