--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -963,7 +963,7 @@
                                 <section class="sidebar-container">
                                     <section class="sidebar" style="width: 259.4px; margin-top: 24px;">
                                         <h3 class="sidebar-title" style="height: 54px;">공지사항</h3>
-                                        <ul style="height: 445.4px;">
+                                        <ul style="height: 445.4px;" class="sidebar-content">
                                             <li>
                                                 <a
                                                     href="/hc/ko/articles/38453158191641-%ED%95%9C%EA%B8%80%EB%82%A0%EB%A1%9C-%EC%9D%B8%ED%95%9C-%EA%B3%A0%EA%B0%9D%EC%84%BC%ED%84%B0-%EC%9A%B4%EC%98%81-%EC%95%88%EB%82%B4-10-9"
