--- a/src/main/resources/templates/main/login-header-no-noti.html
+++ b/src/main/resources/templates/main/login-header-no-noti.html
@@ -1,16 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>로그인 헤더</title>
-        <link
-            rel="stylesheet"
-            href="/static/css/main/login-header-no-noti.css"
-        />
-    </head>
-    <body>
-        <header id="gnb" class="sc-kywvva iwmrny">
+
+        <header id="gnb" class="sc-kywvva iwmrny" th:fragment="header">
             <div class="sc-ewdcjz ipkyrr">
                 <div class="toolbar">
                     <div class="sc-dsutwq bpfqva">
@@ -431,7 +420,3 @@
                 </div>
             </div>
         </header>
-
-        <script src="/static/js/main/login-header.js"></script>
-    </body>
-</html>
