--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -8,10 +8,19 @@
         <link rel="stylesheet" href="/css/main/basic-header.css" />
         <link rel="stylesheet" href="/css/rank/rank.css" />
         <link rel="stylesheet" href="/css/main/footer.css"/>
-        <link rel="stylesheet" href="/css/main/basic-header.css"/>
+        <link
+                rel="stylesheet"
+                href="/css/main/login-header-no-noti.css"
+        />
+
     </head>
     <body>
-    <div th:replace="~{main/basic-header :: header}"></div>
+
+    <div th:if="${loginMember != null}" th:replace="~{main/login-header-no-noti :: header}"></div>
+
+    <div th:unless="${loginMember != null}" th:replace="~{main/basic-header :: header}"></div>
+
+
     <div id="root">
             <div id="app" class="bfedap app">
                 <div class="wrap">
@@ -36,7 +45,6 @@
                                                 </div>
                                             </div>
 
-                                            <!-- 다음 화살표 -->
                                             <div data-role="none" class="slick-arrow slick-next" style="display: block">
                                                 <svg color="#000000" viewBox="0 0 24 24" class="cafwxx">
                                                     <path
@@ -434,4 +442,6 @@
     </body>
         <script src="/js/main/main.js"></script>
         <script src="/js/rank/rank.js"></script>
+        <script src="/js/main/login-header.js"></script>
+
 </html>
