--- a/src/main/resources/templates/main/basic-header.html
+++ b/src/main/resources/templates/main/basic-header.html
@@ -19,7 +19,7 @@
                                 <div class="util">
                                     <ul class="util-btns group">
                                         <li class="btn-agency">
-                                            <a href="" class="sc-ccsojp hlisis"
+                                            <a href="/help/help" class="sc-ccsojp hlisis"
                                                 >고객센터
                                             </a>
                                             <span class="agency-hover">
@@ -50,7 +50,7 @@
                                             </span>
                                         </li>
                                         <li class="btn-agency">
-                                            <a href="" class="sc-ccsojp hlisis"
+                                            <a href="/help/help-notification-list" class="sc-ccsojp hlisis"
                                                 >공지사항</a
                                             >
                                         </li>
@@ -60,7 +60,7 @@
                                                 color="#DBDEE2"
                                                 class="sc-gsntzi dchguz"
                                             ></div>
-                                            <a href="" class="sc-ccsojp hlisis"
+                                            <a href="/member/login" class="sc-ccsojp hlisis"
                                                 >로그인/회원가입</a
                                             >
                                         </li>
@@ -75,7 +75,7 @@
                                         >
                                             <a
                                                 class="sc-ccsojp jgkeau toolbar-nav-item-link"
-                                                href=""
+                                                href="/volunteer/volunteer-list"
                                                 ><p>
                                                     봉사활동<sup
                                                         class="toolbar-nav-item-sup"
@@ -89,7 +89,7 @@
                                         >
                                             <a
                                                 class="sc-ccsojp jgkeau toolbar-nav-item-link"
-                                                href=""
+                                                href="/donation/donation-list"
                                             >
                                                 <p>기부</p>
                                             </a>
@@ -99,7 +99,7 @@
                                         >
                                             <a
                                                 class="sc-ccsojp jgkeau toolbar-nav-item-link"
-                                                href=""
+                                                href="/support/support-list"
                                             >
                                                 <p>후원</p>
                                             </a>
@@ -109,7 +109,7 @@
                                         >
                                             <a
                                                 class="sc-ccsojp jgkeau toolbar-nav-item-link"
-                                                href=""
+                                                href="/rank/rank"
                                             >
                                                 <p>
                                                     랭킹<sup
@@ -124,7 +124,7 @@
                                         >
                                             <a
                                                 class="sc-ccsojp jgkeau toolbar-nav-item-link"
-                                                href=""
+                                                href="review/review-list"
                                             >
                                                 <p>
                                                     봉사후기<sup
@@ -156,7 +156,7 @@
                                         >
                                             <a
                                                 class="sc-ccsojp jgkeau toolbar-nav-item-link"
-                                                href=""
+                                                href="/introduction/introduction"
                                             >
                                                 <p>사업소개</p>
                                             </a>
