--- a/src/main/resources/templates/main/login-header-no-noti.html
+++ b/src/main/resources/templates/main/login-header-no-noti.html
@@ -122,10 +122,10 @@
                                         </li>
                                         <li class="member">
                                             <div class="opener">
-                                                <img
-                                                    class="profile false"
-                                                    src="https://cdn-dantats.stunning.kr/static/feature/profile/default-profile.png.small?q=80&f=webp&t=crop&s=256x256"
-                                                />
+                                                <img class="profile"
+                                                     th:src="${member.profileFileName != null ? '/profile/display?memberId=' + member.id : '/images/default-avatar.jpg'}"
+                                                     alt="프로필"
+                                                     onerror="this.onerror=null; this.src='/images/default-avatar.jpg';" />
                                             </div>
                                             <div
                                                 class="profile-popup util-popup"
