--- a/src/main/resources/static/css/main/login-header-no-noti.css
+++ b/src/main/resources/static/css/main/login-header-no-noti.css
@@ -544,6 +544,7 @@ p {
 }
 .hvowwg .tooltip-content.show {
     visibility: visible;
+    height: 400px;
 }
 .hvowwg .tooltip-content {
     background: rgb(255, 255, 255);
