--- a/src/main/resources/templates/main/login-header-no-noti.html
+++ b/src/main/resources/templates/main/login-header-no-noti.html
@@ -79,6 +79,8 @@
                                                 >
                                                     <div
                                                         class="tooltip-content show"
+                                                        >
+"
                                                     >
                                                         <div
                                                             class="sc-ixxrte jtevuk"
@@ -123,7 +125,8 @@
                                         <li class="member">
                                             <div class="opener">
                                                 <img class="profile"
-                                                     th:src="${member.profileFileName != null ? '/profile/display?memberId=' + member.id : '/images/default-avatar.jpg'}"
+                                                     th:if="${member != null}"
+                                                     th:src="${member.profileFileName != null} ? '/profile/display?memberId=' + ${member.id} : '/images/default-avatar.jpg'"
                                                      alt="프로필"
                                                      onerror="this.onerror=null; this.src='/images/default-avatar.jpg';" />
                                             </div>
@@ -143,16 +146,16 @@
                                                                 class="gnb-profile-box-user"
                                                             >
                                                                 <a
-                                                                    href=""
+                                                                    href="/mypage/mypage-profile-edit"
                                                                     class="sc-ccsojp hlisis"
                                                                 >
                                                                     <span
                                                                         class="sc-fmrtwq imlsut avatar"
                                                                     >
-                                                                        <img
-                                                                            src="https://cdn-dantats.stunning.kr/static/feature/profile/default-profile.png.small?q=80&f=webp&t=crop&s=256x256"
-                                                                            alt="000의 프로필"
-                                                                        />
+                                                                        <img class="profile"
+                                                                             th:src="${member.profileFileName != null} ? '/profile/display?memberId=' + ${member.id} : '/images/default-avatar.jpg'"
+                                                                             src="/images/default-avatar.jpg"
+                                                                             alt="프로필 기본 이미지" />
                                                                     </span>
                                                                     <div
                                                                         class="gnb-profile-box-user-edit-icon"
@@ -169,20 +172,18 @@
                                                                         </svg>
                                                                     </div>
                                                                 </a>
-                                                                <label
-                                                                    class="sc-ibkjds hmilgb gnb-profile-box-user-badge"
-                                                                    >의뢰자</label
-                                                                >
+                                                                <label class="sc-ibkjds hmilgb gnb-profile-box-user-badge"
+                                                                       th:text="${member.memberType}"></label>
+
                                                                 <div
                                                                     class="sc-jmnpzm ktmctf user-nick-wrapper"
                                                                 >
                                                                     <p
                                                                         class="sc-ehmtmk jqtfdi"
                                                                     >
-                                                                        <span
-                                                                            class="sc-ikwkjf hdbjzp nick"
-                                                                            >닉네임</span
-                                                                        >
+                                                                        <span class="sc-ikwkjf hdbjzp nick"
+                                                                              th:text="${member.memberNickName}"></span>
+
                                                                     </p>
                                                                 </div>
                                                             </div>
@@ -192,7 +193,7 @@
                                                                 <li>
                                                                     <a
                                                                         class="sc-ccsojp hlisis gnb-profile-box-menus-item"
-                                                                        href=""
+                                                                        href="/mypage/mypage"
                                                                     >
                                                                         <svg
                                                                             viewBox="0 0 26 22"
@@ -210,7 +211,7 @@
                                                                 <li>
                                                                     <a
                                                                         class="sc-ccsojp hlisis gnb-profile-box-menus-item"
-                                                                        href=""
+                                                                        href="/mypage/mypage"
                                                                     >
                                                                         <svg
                                                                             viewBox="0 0 24 24"
@@ -249,7 +250,7 @@
                                                                 class="gnb-profile-box-actions"
                                                             >
                                                                 <a
-                                                                    href=""
+                                                                    href="/introduction/introduction"
                                                                     target="_blank"
                                                                     class="sc-ccsojp hlisis"
                                                                     >공지사항</a
@@ -261,7 +262,7 @@
                                                                 >
                                                                 <a
                                                                     class="sc-ccsojp hlisis"
-                                                                    href=""
+                                                                    href="/member/logout"
                                                                     >로그아웃</a
                                                                 >
                                                             </div>
