--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1939,7 +1939,7 @@
                                         </div>
                                     </div>
                                     <nav class="pagination">
-                                        <ul class="pagination-list">
+                                        <ul class="pagination-list post-page">
                                             <!-- 처음 페이지로 이동하는 버튼 -->
                                             <li class="pagination-first">
                                                 <a
