--- a/src/main/resources/static/css/main/login-header-no-noti.css
+++ b/src/main/resources/static/css/main/login-header-no-noti.css
@@ -762,6 +762,7 @@ p {
 }
 .bvvilt .tooltip-content.show {
     visibility: visible;
+    height: 400px;
 }
 .bvvilt .tooltip-content {
     --translateX: 160px;
