--- a/src/main/resources/static/css/main/main.css
+++ b/src/main/resources/static/css/main/main.css
@@ -1298,7 +1298,7 @@ img {
 }
 
 @keyframes rollingleft2 {
-	0% { transition: translateX(0); }
+	0% { transform: translateX(0); }
 	100% { transform: translateX(-200%); }
 }
 
