--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -6,7 +6,7 @@
         <title>메인</title>
         <link rel="stylesheet" href="/css/main/main.css" />
         <link rel="stylesheet" href="/css/main/basic-header.css" />
-        <link rel="stylesheet" href="/css/rank/rank.css" />
+        <link rel="stylesheet" href="/css/main/rank-for-main.css" />
         <link rel="stylesheet" href="/css/main/footer.css"/>
         <link rel="stylesheet" href="/css/main/login-header-no-noti.css">
 
