--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -19,8 +19,8 @@
         <th:block th:replace="~{main/basic-header :: header}"></th:block>
     </div>
 
-
     <div id="root">
+        <h1 th:text="${alarm}"></h1>
             <div id="app" class="bfedap app">
                 <div class="wrap">
                     <div class="eucbbu content">
