memberMapper ranking working

--- a/src/main/resources/templates/rank/rank.html
+++ b/src/main/resources/templates/rank/rank.html
@@ -397,6 +397,8 @@
             </main>
         </div>
     </body>
-
+    <script th:inline="javascript">
+        const volunteerGroups = [[${volunteerGroups}]]
+    </script>
     <script src="../../static/js/rank/rank.js"></script>
 </html>
