--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1138,7 +1138,7 @@
                                             />
                                         </div>
                                     </div>
-                                    <!--게시글 내역 테이블 -->
+                                    <!--문의 내역 테이블 -->
                                     <div class="inquiryTable_container">
                                         <div
                                                 class="inquiryTable_row inquiryTable_header"
@@ -1604,7 +1604,7 @@
                                             <div class="action-buttons">
                                                 <input
                                                     type="text"
-                                                    class="Filter_searchInput"
+                                                    class="Filter_searchInput post-page-search"
                                                     placeholder="검색어 입력"
                                                 />
                                                 <button
@@ -1628,7 +1628,7 @@
                                                     >
                                                         <input
                                                             type="checkbox"
-                                                            id="selectAll"
+                                                            id="SelectAll"
                                                         />
                                                     </div>
                                                     <div
