--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1148,7 +1148,7 @@
                                             >
                                                 <input
                                                         type="checkbox"
-                                                        id="selectAll"
+                                                        id="selectAllInquiries"
                                                 />
                                             </div>
                                             <div
@@ -1628,7 +1628,7 @@
                                                     >
                                                         <input
                                                             type="checkbox"
-                                                            id="SelectAll"
+                                                            id="selectAllPosts"
                                                         />
                                                     </div>
                                                     <div
@@ -1684,7 +1684,7 @@
                                                     <div class="ServiceTable_cell">
                                                         <input
                                                             type="checkbox"
-                                                            class="userCheckbox"
+                                                            class="postCheckbox"
                                                         />
                                                     </div>
                                                     <div
