rank controller까지 완료 html 및 js 마무리하면 됨

--- a/src/main/resources/templates/rank/rank.html
+++ b/src/main/resources/templates/rank/rank.html
@@ -398,7 +398,10 @@
         </div>
     </body>
     <script th:inline="javascript">
-        const volunteerGroups = [[${volunteerGroups}]]
+        const volunteerGroups = [[${volunteerGroups}]];
+        const vtRankMembers = [[${vtRankMembers}]];
+        const supportRankMembers = [[${supportRankMembers}]];
+        const donationRankMembers = [[${donationRankMembers}]];
     </script>
     <script src="../../static/js/rank/rank.js"></script>
 </html>
